<resources>
    <string name="app_name">MonkeyInTheJungle</string>
    <string name="str_single_player">Single Player</string>
    <string name="str_multi_player">Multi Player</string>
    <string name="str_score">Score</string>
    <string name="str_options">Options</string>
    <string name="str_random">Random</string>
    <string name="str_number_of_games">Number Of Rounds:</string>
    <string name="str_TwoPair">Two Pair</string>
    <string name="str_TapCounter">Tap Counter</string>
    <string name="str_ShakeIt">Shake It</string>
    <string name="str_FindTheNumber">Find The Number</string>
    <string name="str_WordCollector">Word Collector</string>
    <string name="str_username">Username:</string>
    <string name="btn_save">Save</string>
    <string name="str_your_score">You lucky monkey!! you have finished this game</string>
    <string name="str_multiplayer_game_loby_setup">Multiplayer Lobby</string>
    <string name="str_search_loby">Search Lobby</string>
    <string name="str_create_loby">Create New Lobby</string>
    <string name="str_lobby_name">Lobby Name</string>

    <string name="title_activity_single_player">SinglePlayerActivity</string>
    <string name="title_activity_multi_player">MultiPlayerActivity</string>
    <string name="str_game_missing_number_header">Solve this equation</string>
    <string name="str_collect_word_header">Collect A Word</string>
    <string name="str_reset">Reset</string>
    <string name="str_shake_game_header">Shake Your Phone </string>
    <string name="str_single_player_skip">Skip</string>
    <string name="str_new_game">New Game</string>
    <string name="str_back">Back</string>

    <string-array name="gameNames">
        <item>Two Pairs</item>
        <item>Tap Counter</item>
        <item>Collect a word</item>
        <item>Shake it</item>
        <item>Missing Number</item>
    </string-array>


    <!-- test strings -->
    <string name="str_test_if_works">Hello My Dark World</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
